--- a/akalyx/src/app.postcss
+++ b/akalyx/src/app.postcss
@@ -3,9 +3,51 @@
 @tailwind utilities;
 @tailwind variants;
 
-/* modern theme */
-@font-face {
-	font-family: 'Quicksand';
-	src: url('/fonts/Quicksand.ttf');
-	font-display: swap;
+html,
+body {
+	@apply h-full overflow-hidden;
 }
+
+@keyframes crawlDarkness {
+	0%, 100% {
+	  background-position: top center, center center, bottom center;
+	}
+	50% {
+	  background-position: bottom center, center center, top center;
+	}
+  }
+  
+  @keyframes wobble {
+	0%, 100% {
+	  background-size: 510% 110%, 105% 105%, 100% 100%;
+	}
+	50% {
+	  background-size: 105% 105%, 110% 110%, 105% 105%;
+	}
+  }
+  
+  @keyframes rotateGradient {
+	0%, 100% {
+	  background-position: top left, top right, center;
+	}
+	25% {
+	  background-position: top center, top left, center;
+	}
+	50% {
+	  background-position: top right, top center, center;
+	}
+	75% {
+	  background-position: top center, top right, center;
+	}
+  }
+  
+  body {
+	  background: radial-gradient(ellipse at top left, #552586, transparent 70%),
+				  radial-gradient(ellipse at top right, #881549, transparent 70%),
+				  linear-gradient(to top, #000000, #202020 60%);
+	  background-repeat: no-repeat;
+	  background-attachment: fixed;
+	  animation: crawlDarkness 30s ease-in-out infinite, wobble 10s ease-in-out infinite, rotateGradient 20s linear infinite;
+	  animation-fill-mode: forwards;
+  }
+  
